# STM32-Custom-BootLoader

./: .gitignore  CMakeLists.txt
cmake/: arm-gcc-toolchain.cmake
firmware/app/: CMakeLists.txt
firmware/app/Core/Src/: main.c
firmware/app/Core/Startup/: startup_stm32f446xx.s
firmware/app/linker/: app.ld
firmware/bootloader/: CMakeLists.txt
firmware/bootloader/firmware/bootloader/linker/: bootloader.ld
